# Beyond-English-Multilingual-Self-Consistency-for-Robust-LLM-Reasoning

./: .gitignore  explore_datasets.ipynb  pyproject.toml
config/: models.yaml
configs/: benchmarks.yaml  languages.yaml  models.yaml
docs/: experiment-commands.md
notebooks/: data_exploration.ipynb
scripts/: download_datasets.py  run_all_experiments.sh  run_inference.py  run_scoring.py  validate_models.py
src/: main.py
src/consistency/: voting.py
src/core/: __init__.py  base.py  mlc_runner.py  mlx_runner.py  torch_runner.py
src/evaluation/: metrics.py
src/inference/: prompts.py  runner.py
src/profiler/: __init__.py  latency.py
src/stats/: __init__.py  bootstrap.py
src/tasks/: __init__.py  base.py  parity.py  reasoning.py  translation.py
src/utils/: corpus_stats.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_bootstrap.py  test_corpus_stats.py  test_loader.py  test_metrics.py  test_parity.py  test_plots.py  test_preprocessor.py  test_reasoning.py  test_runners.py  test_translation.py
