[project]
name = "cross-lingual-quantization-eval"  
version = "0.1.0"
description = "Researching the effects of quantization on cross-lingual consistency and reasoning within Apple Silicon execution regimes"
requires-python = ">=3.10"
dependencies = [
    "mlx>=0.14.1",
    "mlx-lm",
    "pandas>=2.2.2",
    "numpy>=1.26.0",
    "matplotlib>=3.10",
    "seaborn>=0.12.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.3.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "huggingface-hub>=0.23.0",
    "datasets>=2.19.0",
    "psutil>=5.9.0",
    "sacrebleu>=2.4.0",
    "evaluate>=0.4.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
comet = ["unbabel-comet>=2.2.0"]
calibration = ["auto-round", "autoawq", "auto-gptq"]
full = [
    "unbabel-comet>=2.2.0",
    "auto-round",
    "autoawq",
    "auto-gptq",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "pyright>=1.1.278",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]